[project]
name = "source"
version = "0.1.0"
description = ""
authors = [
    {name = "khowarlabs",email = "khowarlabs@gmail.com"}
]
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-postgres (>=0.0.16,<0.0.17)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
